tests/samples/block-each-bad-breakpoint/template.blate
// error: unknown breakpoint in each
{@each item in items}{:foo}bar{/each}
